--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<meta http-equiv="refresh" content="0; url=http://example.com/" />
+<meta http-equiv="refresh" content="0"; url="slithek_site/home.html" />
 
-<p><a href="home.html">Click here if page doesn't load...</a></p>
+<p><a href="slithek_site/home.html">Click here if page doesn't load...</a></p>
