--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<meta http-equiv="refresh" content="0; url=http://example.com/" />
-
-<p><a href="home.html">Click here if page doesn't load...</a></p>
+<meta http-equiv="refresh" content="0; url=slithek_site/slithek.html" />
+<p><a href="slithek_site/slithek.html">Click here if page doesn't load...</a></p>
