Added Swirv download to games page

--- a/slithek_site/games1.html
+++ b/slithek_site/games1.html
@@ -19,11 +19,10 @@
 <!---PAGE CONTENT--->
 <div class="PageBody">
 
-
-<a href="Rabbitag.jar" style="margin:auto; color: #CC0; font-size: 24px">Download Rabbitag v1.0.0 (jar)</a>
+<a href="https://github.com/slithek/Swirv/raw/master/Swirv.jar" style="margin:auto; color: #CC0; font-size: 20px">Download Swirv v1.0.0 (Runnable JARY)</a>
+<a href="Rabbitag.jar" style="margin:auto; color: #CC0; font-size: 20px">Download Rabbitag v1.0.0 (Runnable JAR)</a>
 <div style="height:20px"></div>
-<a href="jean.html" style="margin:auto; color: #CC0; font-size: 24px">Play Jean's Journey</a>
-
+<a href="jean.html" style="margin:auto; color: #CC0; font-size: 20px">Play Jean's Journey (Adobe Flash)</a>
 
 </div>
 
