Edited games page

--- a/slithek_site/games1.html
+++ b/slithek_site/games1.html
@@ -19,11 +19,18 @@
 <!---PAGE CONTENT--->
 <div class="PageBody">
 
-<a href="https://github.com/slithek/Swirv/raw/master/Swirv.jar" style="margin:auto; color: #CC0; font-size: 20px">Download Swirv v1.0.0 (Runnable JARY)</a>
+<div style="margin: auto;">
+<a href="https://github.com/slithek/Swirv/raw/master/Swirv.jar" style="margin:auto; color: #CC0; font-size: 20px">Download Swirv v1.0.0 (Runnable JAR)</a>
+</div>
+
+<div style="margin: auto;">
+<div style="height:20px"></div>
 <a href="Rabbitag.jar" style="margin:auto; color: #CC0; font-size: 20px">Download Rabbitag v1.0.0 (Runnable JAR)</a>
+</div>
+
+<div style="margin: auto;">
 <div style="height:20px"></div>
 <a href="jean.html" style="margin:auto; color: #CC0; font-size: 20px">Play Jean's Journey (Adobe Flash)</a>
-
 </div>
 
 <!---BOTTOM BAR--->
