December commit...updated a few things

--- a/slithek_site/pictures.html
+++ b/slithek_site/pictures.html
@@ -22,8 +22,9 @@
 
 <div class="contentContainer">
 <p class="tText">Pictures</p>
-<p class="pText">This is an assortment of a few pictures I have taken over the years.</p>
-</div>
+<p class="pText">Below is a link to my flickr page, where you can find a few of my photography projects:</p>
+<a href="https://www.flickr.com/gp/147019620@N04/4d83na">https://www.flickr.com/gp/147019620@N04/4d83na</a>
+<!--</div>
 
 <img src="images/Pictures/ANIMAL3.jpg" alt="Simon" width="50%" height="50%" style="display: block; border-radius: 5px; margin-top: 50px; margin-bottom: 50px; margin-left: auto; margin-right: auto; box-shadow: 10px 10px 10px 0px rgba(5, 5, 5, 0.4);"/>
 
@@ -53,7 +54,7 @@
 
 <img src="images/Pictures/Yellow Flowe.jpg" alt="Yellow Flower" width="50%" height="50%" style="display: block; border-radius: 5px; margin-top: 50px; margin-bottom: 50px; margin-left: auto; margin-right: auto; box-shadow: 10px 10px 10px 0px rgba(5, 5, 5, 0.4);"/>
 
-</div>
+</div>-->
 
 <!---BOTTOM BAR--->
 <div id="navBar">
@@ -86,7 +87,7 @@
    		<p></p>
         <p>All music, videos, pictures, and games on this site are original works, so feel free to ask me if you would like to use anything on this site for your own purposes!</p>
         <p></p>
-   		<p style="text-align: center">~ Slithek</p>
+   		<p style="text-align: center">~ Jay</p>
     </div>
 
 </div>
