--- a/slithek_site/slithek.html
+++ b/slithek_site/slithek.html
@@ -19,8 +19,8 @@
 <div class="contentContainer">
 
 <p class="tText">Welcome to My Website!</p>
-<p class="pText">Welcome to slithek.com, a site created by Jay Randolph. Have a look around to see what you can find...</p>
-<p class="fText">January 20, 2016</p>
+<p class="pText">Welcome to www.slithek.github.io, a basic website created by Jay Randolph. Have a look around to see what you can find :)</p>
+<p class="fText">December 2016</p>
 </div>
 
 
@@ -58,7 +58,7 @@
         <p></p>
         <p>All music, videos, pictures, and games on this site are original works, so feel free to ask me if you would like to use anything on this site for your own purposes!</p>
    		<p></p>
-   		<p style="text-align: center">~ Slithek</p>
+   		<p style="text-align: center">~ Jay</p>
     </div>
 
 </div>
