--- a/slithek_site/videos.html
+++ b/slithek_site/videos.html
@@ -75,7 +75,7 @@
    		<p></p>
         <p>All music, videos, pictures, and games on this site are original works, so feel free to ask me if you would like to use anything on this site for your own purposes!</p>
         <p></p>
-   		<p style="text-align: center">~ Slithek</p>
+   		<p style="text-align: center">~ Jay</p>
     </div>
 
 </div>
