--- a/slithek_site/games1.html
+++ b/slithek_site/games1.html
@@ -33,6 +33,11 @@
 <a href="jean.html" style="margin:auto; color: #CC0; font-size: 20px">Play Jean's Journey (Adobe Flash)</a>
 </div>
 
+<div style="margin: auto;">
+<div style="height:20px"></div>
+<a href="flappy.zip" style="margin:auto; color: #CC0; font-size: 20px">Download Flapppy Ramses (Zip with Runnable JAR and media files)</a>
+</div>
+
 <!---BOTTOM BAR--->
 <div id="navBar">
 
@@ -64,7 +69,7 @@
    		<p></p>
         <p>All music, videos, pictures, and games on this site are original works, so feel free to ask me if you would like to use anything on this site for your own purposes!</p>
         <p></p>
-   		<p style="text-align: center">~ Slithek</p>
+   		<p style="text-align: center">~ Jay</p>
     </div>
 
 </div>
