--- a/slithek_site/music.html
+++ b/slithek_site/music.html
@@ -30,20 +30,21 @@
 </div>
 
 <div class="musicContainer">
-<p class="tText">Untitled Project</p>
-<p class="pText">Below is a playlist consisting of a few of the music productions I have worked on since releasing "A Speechless World" in no particular order...</p>
+<p class="tText">SoundCloud</p>
+<p class="pText">This is a link to my SoundCloud account, where you can find some of my more recent work:</p>
+<a href="https://www.soundcloud.com/slithek">https://soundcloud.com/slithek</a>
 </div>
-
+<!--
 <div class="soundCloud">
 
 <iframe width="100%" height="450" style="border: none; margin: inherit; border-radius: 0px; border:none;" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/189143129%3Fsecret_token%3Ds-no0qh&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 </div>
 
-<!--<div class="soundCloud">
+<div class="soundCloud">
 <iframe width="450" height="166" style="border: none; margin: inherit; border-radius: 10px; border:none;" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/191529310&amp;color=81e7f0&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-</div>-->
-
 </div>
+
+</div>-->
 
 <!---BOTTOM BAR--->
 <div id="navBar">
@@ -76,7 +77,7 @@
    		<p></p>
         <p>All music, videos, pictures, and games on this site are original works, so feel free to ask me if you would like to use anything on this site for your own purposes!</p>
         <p></p>
-   		<p style="text-align: center">~ Slithek</p>
+   		<p style="text-align: center">~ Jay</p>
     </div>
 
 </div>
