December commit...updated a few things

--- a/slithek_site/music.html
+++ b/slithek_site/music.html
@@ -29,11 +29,13 @@
 
 </div>
 
+<a href="https://www.soundcloud.com/slithek">
 <div class="musicContainer">
 <p class="tText">SoundCloud</p>
-<p class="pText">This is a link to my SoundCloud account, where you can find some of my more recent work:</p>
-<a href="https://www.soundcloud.com/slithek">https://soundcloud.com/slithek</a>
+<p class="pText">Click here to visit my SoundCloud account, where you can find some of my more recent music...</p>
 </div>
+</a>
+
 <!--
 <div class="soundCloud">
 
