--- a/slithek_site/pictures.html
+++ b/slithek_site/pictures.html
@@ -20,12 +20,14 @@
 <!---PAGE CONTENT--->
 <div class="PageBody">
 
+<a href="https://www.flickr.com/gp/147019620@N04/4d83na">
 <div class="contentContainer">
 <p class="tText">Pictures</p>
-<p class="pText">Below is a link to my flickr page, where you can find a few of my photography projects:</p>
-<a href="https://www.flickr.com/gp/147019620@N04/4d83na">https://www.flickr.com/gp/147019620@N04/4d83na</a>
-<!--</div>
+<p class="pText">Click here to visit my flickr page, where you can find a few of my photographs...</p>
+</div>
+</a>
 
+<!---
 <img src="images/Pictures/ANIMAL3.jpg" alt="Simon" width="50%" height="50%" style="display: block; border-radius: 5px; margin-top: 50px; margin-bottom: 50px; margin-left: auto; margin-right: auto; box-shadow: 10px 10px 10px 0px rgba(5, 5, 5, 0.4);"/>
 
 <img src="images/Pictures/ANIMAL2.jpg" alt="Crawfish" width="50%" height="50%" style="display: block; border-radius: 5px; margin-top: 50px; margin-bottom: 50px; margin-left: auto; margin-right: auto; box-shadow: 10px 10px 10px 0px rgba(5, 5, 5, 0.4);"/>
@@ -53,8 +55,8 @@
 <img src="images/Pictures/Tre.jpg" alt="Tall Tree" width="50%" height="50%" style="display: block; border-radius: 5px; margin-top: 50px; margin-bottom: 50px; margin-left: auto; margin-right: auto; box-shadow: 10px 10px 10px 0px rgba(5, 5, 5, 0.4);"/>
 
 <img src="images/Pictures/Yellow Flowe.jpg" alt="Yellow Flower" width="50%" height="50%" style="display: block; border-radius: 5px; margin-top: 50px; margin-bottom: 50px; margin-left: auto; margin-right: auto; box-shadow: 10px 10px 10px 0px rgba(5, 5, 5, 0.4);"/>
-
-</div>-->
+--->
+</div>
 
 <!---BOTTOM BAR--->
 <div id="navBar">
